rust/crates/dsl-core/tests/snapshots/dag_golden__dag_kyc_evidence_and_advance.snap
---
source: crates/dsl-core/tests/dag_golden.rs
assertion_line: 134
expression: compiled
---
CompiledSteps {
    steps: [
        CompileStep {
            verb_call: VerbCall {
                domain: "kyc-case",
                verb: "create",
                arguments: [
                    Argument {
                        key: "cbu-id",
                        value: SymbolRef {
                            name: "cbu",
                            span: Span {
                                start: 34,
                                end: 38,
                            },
                        },
                        span: Span {
                            start: 26,
                            end: 38,
                        },
                    },
                    Argument {
                        key: "case-type",
                        value: Literal(
                            String(
                                "enhanced",
                            ),
                            Span {
                                start: 50,
                                end: 60,
                            },
                        ),
                        span: Span {
                            start: 39,
                            end: 60,
                        },
                    },
                ],
                binding: Some(
                    "case",
                ),
                span: Span {
                    start: 9,
                    end: 71,
                },
            },
            source_stmt: 0,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "document",
                verb: "solicit",
                arguments: [
                    Argument {
                        key: "cbu-id",
                        value: SymbolRef {
                            name: "cbu",
                            span: Span {
                                start: 106,
                                end: 110,
                            },
                        },
                        span: Span {
                            start: 98,
                            end: 110,
                        },
                    },
                    Argument {
                        key: "doc-types",
                        value: List {
                            items: [
                                Literal(
                                    String(
                                        "AML_POLICY",
                                    ),
                                    Span {
                                        start: 123,
                                        end: 135,
                                    },
                                ),
                                Literal(
                                    String(
                                        "FATCA_CERT",
                                    ),
                                    Span {
                                        start: 136,
                                        end: 148,
                                    },
                                ),
                            ],
                            span: Span {
                                start: 122,
                                end: 149,
                            },
                        },
                        span: Span {
                            start: 111,
                            end: 149,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 80,
                    end: 150,
                },
            },
            source_stmt: 1,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "kyc-case",
                verb: "advance",
                arguments: [
                    Argument {
                        key: "case-id",
                        value: SymbolRef {
                            name: "case",
                            span: Span {
                                start: 186,
                                end: 191,
                            },
                        },
                        span: Span {
                            start: 177,
                            end: 191,
                        },
                    },
                    Argument {
                        key: "to-stage",
                        value: Literal(
                            String(
                                "review",
                            ),
                            Span {
                                start: 202,
                                end: 210,
                            },
                        ),
                        span: Span {
                            start: 192,
                            end: 210,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 159,
                    end: 211,
                },
            },
            source_stmt: 2,
        },
    ],
    errors: [],
}
