rust/crates/dsl-core/tests/snapshots/dag_golden__dag_multiple_bindings_different_slots.snap
---
source: crates/dsl-core/tests/dag_golden.rs
assertion_line: 233
expression: compiled
---
CompiledSteps {
    steps: [
        CompileStep {
            verb_call: VerbCall {
                domain: "cbu",
                verb: "create",
                arguments: [
                    Argument {
                        key: "name",
                        value: Literal(
                            String(
                                "Fund A",
                            ),
                            Span {
                                start: 27,
                                end: 35,
                            },
                        ),
                        span: Span {
                            start: 21,
                            end: 35,
                        },
                    },
                    Argument {
                        key: "jurisdiction",
                        value: Literal(
                            String(
                                "LU",
                            ),
                            Span {
                                start: 50,
                                end: 54,
                            },
                        ),
                        span: Span {
                            start: 36,
                            end: 54,
                        },
                    },
                ],
                binding: Some(
                    "fundA",
                ),
                span: Span {
                    start: 9,
                    end: 66,
                },
            },
            source_stmt: 0,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "cbu",
                verb: "create",
                arguments: [
                    Argument {
                        key: "name",
                        value: Literal(
                            String(
                                "Fund B",
                            ),
                            Span {
                                start: 93,
                                end: 101,
                            },
                        ),
                        span: Span {
                            start: 87,
                            end: 101,
                        },
                    },
                    Argument {
                        key: "jurisdiction",
                        value: Literal(
                            String(
                                "IE",
                            ),
                            Span {
                                start: 116,
                                end: 120,
                            },
                        ),
                        span: Span {
                            start: 102,
                            end: 120,
                        },
                    },
                ],
                binding: Some(
                    "fundB",
                ),
                span: Span {
                    start: 75,
                    end: 132,
                },
            },
            source_stmt: 1,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "cbu",
                verb: "create",
                arguments: [
                    Argument {
                        key: "name",
                        value: Literal(
                            String(
                                "Fund C",
                            ),
                            Span {
                                start: 159,
                                end: 167,
                            },
                        ),
                        span: Span {
                            start: 153,
                            end: 167,
                        },
                    },
                    Argument {
                        key: "jurisdiction",
                        value: Literal(
                            String(
                                "DE",
                            ),
                            Span {
                                start: 182,
                                end: 186,
                            },
                        ),
                        span: Span {
                            start: 168,
                            end: 186,
                        },
                    },
                ],
                binding: Some(
                    "fundC",
                ),
                span: Span {
                    start: 141,
                    end: 198,
                },
            },
            source_stmt: 2,
        },
    ],
    errors: [],
}
