rust/crates/dsl-core/tests/snapshots/dag_golden__dag_single_step.snap
---
source: crates/dsl-core/tests/dag_golden.rs
assertion_line: 212
expression: compiled
---
CompiledSteps {
    steps: [
        CompileStep {
            verb_call: VerbCall {
                domain: "session",
                verb: "start",
                arguments: [
                    Argument {
                        key: "mode",
                        value: Literal(
                            String(
                                "new",
                            ),
                            Span {
                                start: 21,
                                end: 26,
                            },
                        ),
                        span: Span {
                            start: 15,
                            end: 26,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 0,
                    end: 27,
                },
            },
            source_stmt: 0,
        },
    ],
    errors: [],
}
